openshift/operator-controller/manifests/02-networkpolicy-openshift-operator-controller-operator-controller-controller-manager.yml
---
# Source: olmv1/templates/networkpolicy/networkpolicy-olmv1-system-operator-controller-controller-manager.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    olm.operatorframework.io/feature-set: standard
  labels:
    app.kubernetes.io/name: operator-controller
    app.kubernetes.io/part-of: olm
  name: operator-controller-controller-manager
  namespace: openshift-operator-controller
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: operator-controller
  policyTypes:
    - Ingress
    - Egress
